src/mongo/db/repl/rs_sync.cpp
@@ -145,13 +145,6 @@ namespace replset {
                 }
             }
             catch (DBException& e) {
-                // Skip duplicate key exceptions.
-                // These are relatively common on initial sync: if a document is inserted
-                // early in the clone step, the insert will be replayed but the document
-                // will probably already have been cloned over.
-                if( e.getCode() == 11000 || e.getCode() == 11001 || e.getCode() == 12582) {
-                    return; // ignore
-                }
                 error() << "exception: " << e.what() << " on: " << it->toString() << endl;
                 fassertFailed(16361);
             }
